Add in remote console functionality to agent and gateway
